# ai-image-chat

./: .env.example  .format_baseline_note.md  .gitignore  .pre-commit-config.yaml  2025-09-30-i-want-to-implemant-some-best-practices-for-my-pro.txt  ACCORDION_UPDATES.md  AUTO_SWITCH_IMPLEMENTATION.md  BEST_PRACTICES.md  BUTTON_DEBUG_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  COMBINED_CHAT_MODE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_STATUS.md  GRADIO5_MIGRATION.md  IMAGE_ACTION_BUTTONS.md  IMG2IMG_COMPLETE.md  IMG2IMG_GUIDE.md  IMG2IMG_IMPLEMENTATION.md  KNOWN_ISSUES.md  LICENSE  MODAL_GALLERY.md  MODE_VISIBILITY_UPDATE.md  Makefile  PHASE25_COMPLETION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_IMPROVEMENTS.md  PHASE3_TROUBLESHOOTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  ROADMAP.md  SESSION_SUMMARY.md  START_HERE.md  TROUBLESHOOTING.md  UI_BEFORE_AFTER.md  (+23 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  test.yml
core/: __init__.py  exceptions.py  generation_queue.py  image_gallery.py  mode_manager.py  prompt_composer.py  prompt_history.py  seed_manager.py  session_stats.py  smart_switch.py  theme_manager.py  vram_estimator.py  vram_monitor.py  workflow_manager.py
docs/: DEPLOYMENT.md  PHASE1_UI_IMPROVEMENTS.md  PHASE2A_THEMES.md  PHASE2B_PROMPT_COMPOSER.md  QUICK_REFERENCE.md  TYPING.md
docs/archive/: CURRENT_STATUS.md  PHASE3_PROGRESS.md
handlers/: __init__.py  chat_handlers.py  gallery_handlers.py  generation_handlers.py  mode_handlers.py  ui_handlers.py  workflow_handlers.py
scripts/: button_test_harness.py  check_code.sh  setup-dev.sh  start_app.sh
static/css/: styles.css
static/js/: keyboard_shortcuts.js  main.js  toast.js
tests/: test_app_chat_extract.py  test_app_models.py  test_buttons.py  test_comprehensive.py  test_config_logging.py  test_handlers.py  test_new_features.py  test_phase25_completion.py  test_smart_switch.py  test_workflow_manager.py
ui/: __init__.py
ui/components/: README.md  __init__.py  chat_interface.py  gallery_view.py  generation_controls.py  generation_panel.py  generation_settings.py  mode_selector.py  prompt_composer_panel.py  queue_panel.py  theme_settings.py
utils/: __init__.py  image_utils.py
workflows/img2img/: flux_img2img.json  flux_img2img_meta.json
workflows/text2img/: flux_krea_text2img_meta.json
