# AI Image Chat - Project Configuration
# Configuration for code formatting, linting, and testing tools

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-chat"
version = "0.3.0"
description = "AI-assisted image generation using ComfyUI + FLUX with Ollama chat"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AI Image Chat Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Exclude common directories
    \.git
  | \.venv
  | venv
  | env
  | ENV
  | \.env
  | build
  | dist
  | \.eggs
  | \.tox
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | node_modules
  | outputs
  | workflows
  | gradio_cached_examples
  | flagged
)/
'''

# ============================================================================
# RUFF - Fast Python Linter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

# Exclude directories
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "ENV",
    ".env",
    "build",
    "dist",
    ".eggs",
    ".tox",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "node_modules",
    "outputs",
    "workflows",
    "gradio_cached_examples",
    "flagged",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # line-too-long (handled by black)
    "B007",   # unused-loop-control-variable (allow dict iteration)
    "B008",   # function-call-in-default-argument
    "B905",   # zip-without-explicit-strict
    "B904",   # raise-without-from-inside-except (too strict for now)
    "N802",   # function-name-should-be-lowercase (allow some exceptions)
    "N806",   # variable-in-function-should-be-lowercase (allow some exceptions)
    "N818",   # error-suffix-on-exception-name (our custom exceptions don't follow this)
    "E722",   # bare-except (allow for now, will fix gradually)
    "F841",   # unused-variable (allow for now, will review)
    "SIM102", # collapsible-if (prefer explicit for clarity)
    "SIM105", # suppressible-exception (prefer explicit for clarity)
    "SIM108", # if-else-block-instead-of-if-exp (prefer explicit for clarity)
    "SIM116", # use-dict-instead-of-if (prefer explicit if/elif for clarity)
    "SIM117", # multiple-with-statements (Gradio pattern)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports and star imports in __init__.py files
"__init__.py" = ["F401", "F403"]
# Allow star imports and their usage in main app
"app.py" = ["F403", "F405"]
# Allow print statements in scripts and tests
"start_*.sh" = ["T201"]
"scripts/*.py" = ["T201"]
"test_*.py" = ["E712"]  # Allow == True/False in tests for clarity

[tool.ruff.lint.isort]
known-first-party = ["core", "utils"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# ============================================================================
# PYTEST - Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = [
    ".",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Strict marker checking
    "--tb=short",                  # Shorter traceback format
    "--cov=core",                  # Coverage for core module
    "--cov=utils",                 # Coverage for utils module
    "--cov-report=term-missing",   # Show missing lines in coverage report
    "--cov-report=html",           # Generate HTML coverage report
    "--cov-report=xml",            # Generate XML coverage report for CI
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["core", "utils"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# MYPY - Type Checking (Optional)
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter type checking
ignore_missing_imports = true
